Updated README File
Updated README File and One button styling in update profile

--- a/Chat Application/chatapp/userprofile/templates/userprofile/updateprofile.html
+++ b/Chat Application/chatapp/userprofile/templates/userprofile/updateprofile.html
@@ -18,6 +18,6 @@
                 <button type="submit" class="btn btn-outline-success">Submit</button>
             </form>
         </div>
-        <a class="btn btn-block btn-outline-info" href="{% url 'home' %}">Start Chit-Chat</a>
+        <a class=" mt-4 btn btn-lg btn-outline-info" href="{% url 'home' %}">Start Chat</a>
     </section>
 {% endblock %}
